Mon Feb  4 08:33:02 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>

 - data/driver.list: list Nitram Elite 2005 with "powerpanel or nitram or
   cpsups" (backport from trunk and reported by Pierre-Louis Bonicoli)

Sun Feb  3 21:43:56 UTC 2008 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 - man/megatec.8: updated from the trunk.

Sun Feb  3 21:34:23 UTC 2008 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 - data/driver.list: A couple more models supported by megatec.
 - data/megatec.c: backport from the trunk.

Sun Feb  3 20:47:24 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/upsdrvctl.c: Pass "-u" flag to the driver also in shutdown
   mode. Print actual command line when debugging. [Peter Selinger]

Sun Feb  3 15:07:34 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - clients/upsclient.c: Fix memory leak when connection to the server
   is lost 

Sun Feb  3 11:27:38 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/nitram.c: Array subscript out of range.

Sun Feb  3 11:21:16 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - drivers/libhid.c: Remove unused variable from HIDGetItemData() and
   HIDGetDataItem(). Discard reports with paths that end in 0x00000000
   when parsing INPUT reports. Display all reports in HIDDumpTree().
 - drivers/usbhid-ups.c: Don't use the data we receive through input
   reports, but retreive the feature report (only the report number is
   used to determine which one to get).

Sun Feb  3 10:36:36 UTC 2008 / Arjen de Korte <arjen@de-korte.org>

 - server/access.c: On x86 it is only valid to do a left shift operation
   for 0-31 bits, so the ACL 0.0.0.0/0 was broken. Reverted to the old
   method of calculating the CIDR bitmask. [Thomas Jarosch]

Fri Feb  1 22:04:30 UTC 2008 / Kjell Claesson <kjell.claesson@epost.tidanet.se>

 - drivers/bcmxcp.c, drivers/nut_usb.c, drivers/nut_usb.h: (backport from the trunk)
   Changed to version 0.14. Fix for PW5115 and PW9120 running on usb.
