@@ -1,3 +1,9 @@
+Fri Feb  8 07:08:49 UTC 2008 / Arjen de Korte <arjen@de-korte.org>
+
+ - common/common.c,include/common.h: cleanup and change the arguments
+   to the upsdebug_hex() function so that it no longer requires casting
+   to an unsigned char.
+
 Mon Feb  4 08:33:02 UTC 2008 / Arnaud Quette <aquette.dev@gmail.com>
 
  - data/driver.list: list Nitram Elite 2005 with "powerpanel or nitram or
